--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "nodemon src/index.js",
-    "start": "node src/index.js"
+    "dev": "bottender dev",
+    "start": "bottender start"
   },
   "dependencies": {
     "@kkbox/kkbox-js-sdk": "1.3.6",
     "axios": "^0.18.0",
-    "bottender": "0.14.34",
+    "bottender": "1.4.x",
     "md5": "^2.2.1",
     "nodemon": "1.17.5"
   }
