--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@kkbox/kkbox-js-sdk": "1.3.6",
+    "axios": "^0.20.0",
     "body-parser": "^1.19.0",
     "bottender": "1.4.x",
     "express": "^4.17.1",
