--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@google-cloud/datastore": "^6.1.0",
     "@kkbox/kkbox-js-sdk": "1.3.6",
     "axios": "^0.20.0",
     "body-parser": "^1.19.0",
